--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
     username: root
     password: Alex@1386
 com:
-
+  schlader:
+    james:
+      cors-origin: http://localhost:3000
 server:
   port: 8088
 
